nullaway_error_4413D890-204B-4D35-B419-DF58317230CD.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/vendor/HibernateJpaDialect.java:304: error: [NullAway] passing @Nullable parameter 'ex.getMessage()' where @NonNull is required
			return new DuplicateKeyException(ex.getMessage(), ex);
			                                              ^
    (see http://t.uber.com/nullaway )
